welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: identifier expected but integer literal found.
	for (i <- 0 to nums[3]) {
                            ^arrayFront9:9: error: ']' expected but '}' found.
}
^